# civic-pulse

./: .gitignore  README.md
backend/: .env.example  AGENTS.md  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  repositories.py
backend/app/agents/: __init__.py  browser_agent.py  chat_context.py  mcp_servers.py  summarizer_agent.py  tools.py
backend/app/routes/: __init__.py  articles.py  chat.py  ingestion.py  subscribers.py
backend/app/services/: __init__.py  chat.py  database_service.py  ingestion.py  scheduler.py  whatsapp.py
backend/tests/: conftest.py  test_database_service.py  test_ingestion.py  test_repositories.py  test_tools.py
backend/tests/agents/: test_browser_agent_unit.py  test_mcp_servers_unit.py  test_summarizer_agent_unit.py  test_tools_unit.py
backend/tests/routes/: test_articles_routes_unit.py  test_chat_routes_unit.py  test_ingestion_routes_unit.py  test_subscribers_routes_unit.py
backend/tests/services/: test_chat_service.py  test_database_service_unit.py  test_ingestion_service.py  test_scheduler_service.py  test_whatsapp_service.py
frontend/: .env.local.example  AGENTS.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/articles/[id]/: page.tsx
frontend/components/: SubscribeForm.tsx
frontend/lib/: api.ts  placeholders.ts
frontend/types/: article.ts
