[project]
name = "civic-pulse-backend"
version = "0.1.0"
description = "FastAPI backend for Civic Pulse"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai-agents>=0.6.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pypdf>=5.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
